adding house features
