# server/crates/endpoints/src/house/models.rs
@@ -10,6 +10,12 @@ pub struct HouseResponse {
     pub url: String,
     pub lat: f64,
     pub lon: f64,
+    pub price_lower: i32,
+    pub price_upper: i32,
+    pub num_bathrooms: i32,
+    pub num_bedrooms: i32,
+    pub num_carspaces: i32,
+    pub property_type: String,
 }
 
 impl From<HouseItem> for HouseResponse {
@@ -20,6 +26,12 @@ impl From<HouseItem> for HouseResponse {
             url: house.url,
             lat: house.lat,
             lon: house.lng,
+            price_lower: house.price_lower,
+            price_upper: house.price_upper,
+            num_bathrooms: house.num_bathrooms,
+            num_bedrooms: house.num_bedrooms,
+            num_carspaces: house.num_carspaces,
+            property_type: house.property_type,
         }
     }
 }
